# nullstar

./: .gitattributes  .gitignore  BUILDING.md  BUILD_INFO.json  NETWORK.md  PROVENANCE.md  README.md  RELEASE_NOTES.md  build_msvc_pgo.bat  build_msvc_pgo.ps1
docs/: BUILDING.md  DEVELOPMENT_BUILDS.json  DEVELOPMENT_BUILDS.md  EMBEDDING.md  GITHUB_RELEASE_003.md  GITHUB_RELEASE_027.md  NETWORK.md  NULLSTAR_027_RELEASE_NOTES.md  PROVENANCE.md  README.md  RELEASE_NOTES.md  TESTING.md  TRAINING.md
nets/: README.md
scripts/: build_mingw.bat  build_mingw.ps1  build_msvc_pgo.bat  build_msvc_pgo.ps1  cpu.bat  gpu.bat  prepare_dev_build.bat  prepare_dev_build.ps1  train_existing_full_cpu.bat  train_existing_smoke_1m_cpu.bat  train_full_cpu.bat  train_smoke_1m_cpu.bat  verify_build.bat  verify_build.ps1
src/: Makefile  attack.cpp  attack.h  bitboard.cpp  bitboard.h  chrono.cpp  chrono.h  eval.h  hash.cpp  hash.h  main.cpp  main.h  make_it.sh  movegen.cpp  movegen.h  movesort.cpp  movesort.h  net.cpp  net.h  nnue.cpp  nnue.h  nullstar.sln  nullstar.vcxproj  nullstar.vcxproj.filters  search.cpp  search.h  selfplay.cpp  selfplay.h  uci.cpp  uci.h
tools/: CMakeLists.txt  hash_table_probe.cpp
tools/embed_file/: README.md  embed_file.cpp
training/: README.md  build_master_corpus.bat  build_master_corpus.py  check_indentation.bat  check_indentation.py  check_selfplay_perspective_features.bat  check_selfplay_perspective_features.py  clean_here.bat  commands.txt  config.json  convert_selfplay_blocks.bat  convert_selfplay_blocks.py  convert_to_sparse.bat  convert_to_sparse.py  extract_quiet_selfplay.bat  extract_quiet_selfplay.py  requirements.txt  run_pipeline.bat  run_pipeline.py  shuffle_training_txt.bat  shuffle_training_txt.py  split_training_txt.bat  split_training_txt.py  train.py  verify_corpus_manifest.bat  verify_corpus_manifest.py  verify_export_parity.bat  verify_export_parity.py  verify_perspective_conversion.bat  verify_perspective_conversion.py  verify_sparse_features.bat  verify_sparse_features.py  verify_sparse_structure.bat  verify_sparse_structure.py  verify_training_txt.bat  verify_training_txt.py  visualize_nnue.bat  visualize_nnue.py  (+1 more)
(+3 files in other folders)
